--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,4 +1,4 @@
-ion-menu ion-content {
+/* ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
 
@@ -17,7 +17,8 @@ ion-menu.md ion-note {
   margin-bottom: 30px;
 }
 
-ion-menu.md ion-list-header, ion-menu.md ion-note {
+ion-menu.md ion-list-header,
+ion-menu.md ion-note {
   padding-left: 10px;
 }
 
@@ -106,8 +107,8 @@ ion-note {
   display: inline-block;
   font-size: 16px;
   color: var(--ion-color-medium-shade);
-}
+} */
 
 ion-item.selected {
   --color: var(--ion-color-primary);
-} 
+}
